bad/assign_arr_elem_string_bool.example_compiler_output
ERROR
[1mbad/assign_arr_elem_string_bool.lat:4:21: [1;31merror: [0;1massigning to `string` from incompatible type `boolean`[m
	(new string[3])[1] = true;
	                   [1;32m^[m
